--- a/tag_transformation.ipynb
+++ b/tag_transformation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "6f6ba397",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "\n",
     "# 1. 讀取 CSV (請確認編碼，中文常是 utf-8-sig 或 gb18030)\n",
-    "file_path = '2024_江苏省_无锡市_宜兴市_餐饮服务.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_餐饮服务.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "id": "b72cfe2c",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "id": "66e24ed7",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "id": "624196f9",
    "metadata": {},
    "outputs": [
@@ -241,13 +241,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "8b409102",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. 讀取 CSV (請確認編碼，中文常是 utf-8-sig 或 gb18030)\n",
-    "file_path = '2024_江苏省_无锡市_宜兴市_公司企业.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_公司企业.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "6de20fa1",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "       '其它农林牧渔基地|商务住宅', '水果基地', '花卉苗圃基地', '知名企业'], dtype=object)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "e7023bb9",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "id": "e6718073",
    "metadata": {},
    "outputs": [
@@ -438,13 +438,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "id": "57d863c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. 讀取 CSV (請確認編碼，中文常是 utf-8-sig 或 gb18030)\n",
-    "file_path = '2024_江苏省_无锡市_宜兴市_交通设施服务.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_交通设施服务.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "id": "3ca26217",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
        "       '货运火车站', '路边停车场|交通设施服务'], dtype=object)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "id": "4c8fbafe",
    "metadata": {},
    "outputs": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "id": "d36985d6",
    "metadata": {},
    "outputs": [
@@ -627,13 +627,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "id": "9fd12d15",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. 讀取 CSV (請確認編碼，中文常是 utf-8-sig 或 gb18030)\n",
-    "file_path = '2024_江苏省_无锡市_宜兴市_体育休闲服务.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_体育休闲服务.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "id": "e9cb5e42",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "id": "40a9a8e6",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "id": "47737eb8",
    "metadata": {},
    "outputs": [
@@ -828,13 +828,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "id": "e434f06d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. 讀取 CSV (請確認編碼，中文常是 utf-8-sig 或 gb18030)\n",
-    "file_path = '2024_江苏省_无锡市_宜兴市_医疗保健服务.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_医疗保健服务.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "id": "281c75b9",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
        "       '疾病预防', '专科医院|医疗保健服务', '骨科医院|医疗保健服务', '核酸检测'], dtype=object)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "id": "d8985dec",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "id": "69b48f38",
    "metadata": {},
    "outputs": [
@@ -1016,12 +1016,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "id": "544ba734",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '2024_江苏省_无锡市_宜兴市_商务住宅.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_商务住宅.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 22,
    "id": "d62e3abf",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 23,
    "id": "70769412",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "id": "f3f3642a",
    "metadata": {},
    "outputs": [
@@ -1190,12 +1190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 25,
    "id": "90e59c90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '2024_江苏省_无锡市_宜兴市_生活服务.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_生活服务.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 26,
    "id": "7bc0ee3d",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1229,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 27,
    "id": "d797b719",
    "metadata": {},
    "outputs": [
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 28,
    "id": "bdfa7ef7",
    "metadata": {},
    "outputs": [
@@ -1404,12 +1404,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 29,
    "id": "5df66b4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '2024_江苏省_无锡市_宜兴市_科教文化服务.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_科教文化服务.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 30,
    "id": "ead0be62",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1435,7 @@
        "       '幼儿园|科教文化服务'], dtype=object)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 31,
    "id": "5bfa1c16",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 32,
    "id": "e957293b",
    "metadata": {},
    "outputs": [
@@ -1597,12 +1597,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 33,
    "id": "08fde054",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '2024_江苏省_无锡市_宜兴市_购物服务.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_购物服务.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 34,
    "id": "841cc623",
    "metadata": {},
    "outputs": [
@@ -1661,7 +1661,7 @@
        "       '花卉市场|公司企业', '超市|住宿服务', '文化用品店|购物服务'], dtype=object)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 35,
    "id": "0219e3ec",
    "metadata": {},
    "outputs": [
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 36,
    "id": "097dec46",
    "metadata": {},
    "outputs": [
@@ -1864,12 +1864,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 37,
    "id": "0eeb0337",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '2024_江苏省_无锡市_宜兴市_金融保险服务.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_金融保险服务.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 38,
    "id": "58408f12",
    "metadata": {},
    "outputs": [
@@ -1896,7 +1896,7 @@
        "       '北京银行', '上海浦东发展银行ATM', '汇丰银行', '金融保险机构|公司企业'], dtype=object)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 39,
    "id": "095ab874",
    "metadata": {},
    "outputs": [
@@ -1916,32 +1916,32 @@
      "output_type": "stream",
      "text": [
       "預覽購物類資料處理結果:\n",
-      "                  name         行业小类 osm_tag\n",
-      "0        宜兴市瑞新汽车服务有限公司  汽车服务相关|汽车销售    bank\n",
-      "1             宝信车行精品展厅   二手车交易|汽车销售    bank\n",
-      "2        天猫养车(和桥五洲国际店)    汽车养护|汽车服务    bank\n",
-      "3                鼎盛名车馆   二手车交易|汽车销售    bank\n",
-      "4            途虎养车(团氿店)    汽车养护|汽车服务    bank\n",
-      "5           鸿泽汽车维修有限公司    汽车养护|汽车服务    bank\n",
-      "6                 小韩汽修  汽车配件销售|汽车维修    bank\n",
-      "7          天猫养车(新官西路店)    汽车养护|汽车服务    bank\n",
-      "8      途虎养车工场店(宜兴宜北路店)    汽车养护|汽车维修    bank\n",
-      "9                 小林汽修    汽车养护|汽车服务    bank\n",
-      "10           龟博士汽车钣金护理    汽车养护|汽车维修    bank\n",
-      "11           越车坊汽车装潢美容    汽车养护|汽车维修    bank\n",
-      "12                宏兴汽修   二手车交易|汽车销售    bank\n",
-      "13  小程汽车维修服务(24小时道路救援)    汽车养护|汽车维修    bank\n",
-      "14       德国马牌轮胎(宜兴周铁店)    汽车养护|汽车维修    bank\n",
-      "15        小丁轮胎店(途虎养车店)  汽车配件销售|汽车维修    bank\n",
-      "16            途乐汽车养护中心    汽车养护|汽车维修    bank\n",
-      "17             宜兴汇江汽修厂    汽车养护|汽车维修    bank\n",
-      "18         天猫养车(氿滨南路店)    汽车养护|汽车服务    bank\n",
-      "19         宜兴市金牌轮胎有限公司  汽车配件销售|汽车维修    bank\n",
-      "20               惠盈汽修厂    汽车养护|汽车维修    bank\n",
-      "21    德国马牌轮胎(24小时自助洗车)    汽车养护|汽车服务    bank\n",
-      "22            顺风汽车维修公司    汽车养护|汽车维修    bank\n",
-      "23  杭州腾骅汽车变速箱维修(宜兴分公司)    汽车养护|汽车维修    bank\n",
-      "24                名驭汽车    汽车养护|汽车服务    bank\n"
+      "                           name         行业小类 osm_tag\n",
+      "0               宜兴农村商业银行(云溪分理处)       农村商业银行    bank\n",
+      "1                  无锡中环资产管理有限公司       金融保险机构    bank\n",
+      "2                宜兴农村商业银行(新芳支行)       农村商业银行    bank\n",
+      "3     江苏宜兴农村商业银行24小时自助银行(新芳分理处)    农村商业银行ATM     atm\n",
+      "4             中国邮政储蓄银行(新芳新西路支行)     中国邮政储蓄银行    bank\n",
+      "5                兴业银行(宜兴东氿社区支行)         兴业银行    bank\n",
+      "6             中国人寿保险股份有限公司(振兴路)     中国人寿保险公司    bank\n",
+      "7                中国建设银行(宜兴城中支行)       中国建设银行    bank\n",
+      "8        中国建设银行24小时自助银行(宜城城中支行)    中国建设银行ATM     atm\n",
+      "9          中国农业银行24小时自助银行(宜兴支行)    中国农业银行ATM     atm\n",
+      "10                 中国农业银行(宜兴分行)       中国农业银行    bank\n",
+      "11             江苏宜兴农村商业银行(宜城支行)       农村商业银行    bank\n",
+      "12           交通银行24小时自助银行(宜兴支行)      交通银行ATM     atm\n",
+      "13       中国农业银行24小时自助银行(宜兴迎宾支行)    中国农业银行ATM     atm\n",
+      "14               中国农业银行(宜兴迎宾支行)       中国农业银行    bank\n",
+      "15                         中国人寿     中国人寿保险公司    bank\n",
+      "16               宜兴农村商业银行(宜城支行)       农村商业银行    bank\n",
+      "17                   交通银行(宜兴支行)         交通银行    bank\n",
+      "18       宜兴农村商业银行24小时自助银行(宜城支行)    农村商业银行ATM     atm\n",
+      "19                         交银人寿         保险公司    bank\n",
+      "20                  宜兴市企业金融服务中心       金融保险机构    bank\n",
+      "21       中国邮政储蓄银行24小时自助银行(宜城支行)  中国邮政储蓄银行ATM     atm\n",
+      "22  无锡市住房置业担保有限公司宜兴分公司(宜兴建工大厦店)       金融保险机构    bank\n",
+      "23       宜兴农村商业银行24小时自助银行(城南支行)    农村商业银行ATM     atm\n",
+      "24               宜兴农村商业银行(城南支行)       农村商业银行    bank\n"
      ]
     }
    ],
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 40,
    "id": "9514c7fa",
    "metadata": {},
    "outputs": [
@@ -2073,12 +2073,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 41,
    "id": "1730db10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = '2024_江苏省_无锡市_宜兴市_汽车服务.csv'  # 你的檔案名稱\n",
+    "file_path = 'Yixing_data/2024_江苏省_无锡市_宜兴市_汽车服务.csv'  # 你的檔案名稱\n",
     "try:\n",
     "    df = pd.read_csv(file_path, encoding='utf-8-sig')\n",
     "except UnicodeDecodeError:\n",
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 42,
    "id": "a4c77242",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2102,7 @@
        "       '汽车服务相关|公司企业', '专用充电站', '加气站', '壳牌'], dtype=object)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 43,
    "id": "6e1c380c",
    "metadata": {},
    "outputs": [
@@ -2212,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 44,
    "id": "d60ebfbc",
    "metadata": {},
    "outputs": [
