--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "14eb592f",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(70913, 22)\n"
+      "(71952, 22)\n"
      ]
     }
    ],
@@ -28,27 +28,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f46280e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['restaurant', 'cafe', 'fast food', 'ice cream', 'office',\n",
-       "       'greenhouse', 'industrial', 'barn', 'parking', 'bus station',\n",
-       "       'parking entrance', 'public', 'loading dock', 'bar', 'nightclub',\n",
-       "       'sports centre', 'gambling', 'internet cafe', 'commercial',\n",
-       "       'theatre', 'cinema', 'hospital', 'hotel', 'dojo', 'riding hall',\n",
-       "       'clinic', 'pharmacy', 'dentist', 'veterinary', 'apartments',\n",
-       "       'detached', 'dormitory', 'residential', 'service', 'warehouse',\n",
-       "       'post office', 'retail', 'charging station', 'grave yard',\n",
-       "       'training', 'arts centre', 'driving school', 'kindergarten',\n",
-       "       'exhibition centre', 'school', 'college', 'library', 'university',\n",
-       "       'marketplace'], dtype=object)"
+       "array(['restaurant', 'cafe', 'fast_food', 'ice_cream', 'office',\n",
+       "       'greenhouse', 'industrial', 'barn', 'parking', 'bus_station',\n",
+       "       'parking_entrance', 'public', 'loading_dock', 'bar', 'nightclub',\n",
+       "       'sports_centre', 'gambling', 'internet_cafe', 'commercial',\n",
+       "       'theatre', 'cinema', 'hospital', 'hotel', 'dojo', 'clinic',\n",
+       "       'pharmacy', 'dentist', 'veterinary', 'apartments', 'detached',\n",
+       "       'dormitory', 'residential', 'service', 'warehouse', 'post_office',\n",
+       "       'retail', 'charging_station', 'grave_yard', 'training',\n",
+       "       'arts_centre', 'driving_school', 'kindergarten',\n",
+       "       'exhibition_centre', 'school', 'college', 'library', 'university',\n",
+       "       'marketplace', 'bank', 'atm', 'car_wash', 'fuel'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
