--- a/h3_l7_df_yixing.ipynb
+++ b/h3_l7_df_yixing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "f2ce3551",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "45cd9f88",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "d959b98b",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
        "[432 rows x 53 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "afad52d3",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
+   "id": "f60bd2a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h3_l7_df_yixing.to_csv(\"h3_l7_df_yixing.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "2ca82d10",
    "metadata": {},
    "outputs": [
